--- a/digit_cls_flask/requirements.txt
+++ b/digit_cls_flask/requirements.txt
@@ -1,7 +1,6 @@
-Flask==3.0.3
-numpy>=1.24,<2
-opencv-python==4.10.0.84
+flask
 tensorflow-cpu==2.15.0
-Pillow==10.4.0
-gunicorn==23.0.0
-
+opencv-python
+numpy
+Pillow
+gunicorn
